@@ -20,8 +20,13 @@
    Boston, MA 02110-1301, USA.  */
 
 #include "defs.h"
+#include "regcache.h"
+
+#include <sys/procfs.h>
+#include "gregset.h"
 
 #include "sparc64-tdep.h"
+#include "sparc-tdep.h"
 #include "sparc-nat.h"
 #include "inferior.h"
 #include "target.h"
@@ -40,6 +45,30 @@ static const struct sparc_gregset sparc64_linux_ptrace_gregset =
   4				/* sizeof (%y) */
 };
 
+
+void
+supply_gregset (prgregset_t *gregs)
+{
+  sparc64_supply_gregset (sparc_gregset, current_regcache, -1, gregs);
+}
+
+void
+supply_fpregset (prfpregset_t *fpregs)
+{
+  sparc64_supply_fpregset (current_regcache, -1, fpregs);
+}
+
+void
+fill_gregset (prgregset_t *gregs, int regnum)
+{
+  sparc64_collect_gregset (sparc_gregset, current_regcache, regnum, gregs);
+}
+
+void
+fill_fpregset (prfpregset_t *fpregs, int regnum)
+{
+  sparc64_collect_fpregset (current_regcache, regnum, fpregs);
+}
 
 /* Provide a prototype to silence -Wmissing-prototypes.  */
 void _initialize_sparc64_linux_nat (void);
