@@ -1,3 +1,12 @@
+2006-04-04  David S. Miller  <davem@davemloft.net>
+
+	* config/linux.mh (NATDEPFILES): Remove sparc-sol2-nat.o
+	* config/linux64.h (NATDEPFILES): Likewise
+	* sparc-linux-nat.c (supply_gregset, supply_fpregset, fill_gregset,
+	fill_fpregset): New.
+	* sparc64-linux-nat.c (supply_gregset, supply_fpregset, fill_gregset,
+	fill_fpregset): New.
+
 2006-04-04  Andreas Schwab  <schwab@suse.de>
 
 	* Makefile.in (elf_common_h): Define.
